--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: ^11.6.0
   image_picker: ^1.0.7
   cloud_functions: ^4.6.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
