--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.0.7
   cloud_functions: ^4.6.0
   intl: ^0.19.0
+  google_maps_flutter: ^2.5.3
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
