--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
         android:label="mungteacher"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        
-         android:usesCleartextTraffic="true">
+        android:enableOnBackInvokedCallback="true"
+        android:usesCleartextTraffic="true">
+      
         <activity
             android:name=".MainActivity"
             android:exported="true"
