--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   url_launcher: ^6.2.4
   flutter_inappwebview: ^5.3.2
   daum_postcode_search: ^0.0.2
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
